# apricot

./: .clang-format  .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  cmake.py  setup.py
apricot/: __init__.py  __init__.pyi  geometry.py  root.py
apricot/anita/: cosmicray.py
apricot/utils/: parsing.py
data/calibration/Xmax/: README
data/particles/tau/: README.md
include/apricot/: Apricot.hpp  Atmosphere.hpp  Constants.hpp  Coordinates.hpp  Detector.hpp  Earth.hpp  Flux.hpp  Geometry.hpp  Interaction.hpp  InteractionInfo.hpp  Particle.hpp  Propagator.hpp  Random.hpp  Source.hpp
include/apricot/atmospheres/: ExponentialAtmosphere.hpp
include/apricot/detectors/: AntarcticDetector.hpp  EnergyCutDetector.hpp  OrbitalDetector.hpp  PerfectDetector.hpp
include/apricot/earth/: PREM.hpp  SphericalEarth.hpp
include/apricot/fluxes/: FixedParticleFlux.hpp  UniformParticleFlux.hpp
include/apricot/particles/: ChargedLepton.hpp  Decayable.hpp  Neutrino.hpp  NeutrinoCrossSection.hpp  NeutrinoYFactor.hpp  Proton.hpp  TauDecayTable.hpp  UHECR.hpp
include/apricot/propagators/: SimplePropagator.hpp
include/apricot/sources/: SphericalCapSource.hpp
python/: CMakeLists.txt  PyApricot.cpp  PyAtmosphere.cpp  PyChargedLepton.cpp  PyDetector.cpp  PyEarth.cpp  PyFlux.cpp  PyGeometry.cpp  PyInteraction.cpp  PyNeutrino.cpp  PyNeutrinoCrossSection.cpp  PyNeutrinoYFactor.cpp  PyPREM.cpp  PyParticle.cpp  PyPropagator.cpp  PySource.cpp
scripts/: apricot
src/: AntarcticDetector.cpp  CMakeLists.txt  Earth.cpp  ElectronNeutrino.cpp  EnergyCutDetector.cpp  ExponentialAtmosphere.cpp  Geometry.cpp  Geometry.hpp  Interaction.cpp  Muon.cpp  Neutrino.cpp  NeutrinoCrossSection.cpp  NeutrinoYFactor.cpp  OrbitalDetector.cpp  PREM.cpp  PerfectDetector.cpp  Propagator.cpp  SimplePropagator.cpp  SphericalCapSource.cpp  SphericalEarth.cpp  Tau.cpp  TauDecayTable.cpp  Utils.hpp
tests/: test_PREM.py  test_atmosphere.py  test_charged_leptons.py  test_cosmicray_acceptance.py  test_detector.py  test_earth.py  test_flux.py  test_geometry.py  test_interaction.py  test_io_root.py  test_neutrino.py  test_particle.py  test_source.py  test_uhecr.py
